tests/ui/rfcs/rfc-2632-const-trait-impl/staged-api.unstable.stderr
error: `<Foo as staged_api::MyTrait>::func` is not yet stable as a const fn
  --> $DIR/staged-api.rs:34:5
   |
LL |     Foo::func();
   |     ^^^^^^^^^^^
   |
   = help: add `#![feature(foo)]` to the crate attributes to enable

error: `<Foo as staged_api::MyTrait>::func` is not yet stable as a const fn
  --> $DIR/staged-api.rs:45:5
   |
LL |     Foo::func();
   |     ^^^^^^^^^^^
   |
   = help: add `#![feature(foo)]` to the crate attributes to enable

error: const-stable function cannot use `#[feature(unstable)]`
  --> $DIR/staged-api.rs:55:5
   |
LL |     Unstable::func();
   |     ^^^^^^^^^^^^^^^^
   |
help: if it is not part of the public API, make this function unstably const
   |
LL + #[rustc_const_unstable(feature = "...", issue = "...")]
LL | const fn stable_const_context() {
   |
help: otherwise `#[rustc_allow_const_fn_unstable]` can be used to bypass stability checks
   |
LL + #[rustc_allow_const_fn_unstable(unstable)]
LL | const fn stable_const_context() {
   |

error: const-stable function cannot use `#[feature(foo)]`
  --> $DIR/staged-api.rs:57:5
   |
LL |     Foo::func();
   |     ^^^^^^^^^^^
   |
help: if it is not part of the public API, make this function unstably const
   |
LL + #[rustc_const_unstable(feature = "...", issue = "...")]
LL | const fn stable_const_context() {
   |
help: otherwise `#[rustc_allow_const_fn_unstable]` can be used to bypass stability checks
   |
LL + #[rustc_allow_const_fn_unstable(foo)]
LL | const fn stable_const_context() {
   |

error: const-stable function cannot use `#[feature(foo)]`
  --> $DIR/staged-api.rs:59:5
   |
LL |     const_context_not_const_stable()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: if it is not part of the public API, make this function unstably const
   |
LL + #[rustc_const_unstable(feature = "...", issue = "...")]
LL | const fn stable_const_context() {
   |
help: otherwise `#[rustc_allow_const_fn_unstable]` can be used to bypass stability checks
   |
LL + #[rustc_allow_const_fn_unstable(foo)]
LL | const fn stable_const_context() {
   |

error: aborting due to 5 previous errors
